# Pediatric-Agent

./: .gitignore  Readme.md
Backend/: README.md  __init__.py  pyproject.toml
Backend/app/: main.py
Backend/app/api/v1/: __init__.py
Backend/app/api/v1/middlewares/: error_handler.py
Backend/app/api/v1/routes/: child.py  growth.py  health.py  nutrition.py  user.py
Backend/app/api/v1/schemas/: __init__.py  child.py  user.py
Backend/app/api/v1/schemas/growth/: growth.py  nutrition.py
Backend/app/api/v1/schemas/user/: child.py  user.py
Backend/app/core/v1/common/: exceptions.py  logger.py
Backend/app/core/v1/db/: __init__.py
Frontend/: Readme.md
